# ymredux

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-ymredux.yml
server/: CMakeLists.txt
server/src/: main.cpp
server/src/net/: packet.h  protocol.h  socket.h  utility.h
src/: main.cpp
src/core/: tcp_connection.cpp  tcp_connection.hpp  tcp_server.cpp  tcp_server.hpp
src/core/utils/: endian.hpp
src/net/: packet.h  socket.h  socket_win32.h  utility.h
src/net/protocol/ymsg/: ymsg_field.h  ymsg_header.h
src/net/protocol/ymsg/enums/: ymsg_field_type.hpp  ymsg_message_type.hpp  ymsg_status_type.hpp
src/net/protocol/ymsg/structure/: ymsg_frame_field.h  ymsg_frame_header.h
src/server/: handlers.h  server.cpp  server.h
src/server/handlers/: helo.cpp  login_stage2.cpp  port_check.cpp
src/ymsg/: ymsg_connection.cpp  ymsg_connection.hpp  ymsg_frame.hpp  ymsg_frame_field.cpp  ymsg_frame_field.hpp  ymsg_frame_field_type.hpp  ymsg_frame_status.hpp  ymsg_frame_type.hpp  ymsg_header.hpp
